--- a/Pet Shop/index.html
+++ b/Pet Shop/index.html
@@ -72,7 +72,7 @@
                         d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
                         class="shape-fill"></path>
                     <defs>
-                        <linearGradient id="header-shape-gradient" x2="0.35" y2="1">
+                        <linearGradient style='border:none;' id="header-shape-gradient" x2="0.35" y2="1">
                             <stop offset="0%" stop-color="var(--color-stop)" />
                             <stop offset="60%" stop-color="var(--color-stop)" />
                             <stop offset="100%" stop-color="var(--color-bot)" />
@@ -82,7 +82,7 @@
 
             </div>
             <div class="col services__content">
-                <h2>Our Services</h2>
+                <h2 class="heading__section">Our Services</h2>
                 <p>National Brand With a Local Feel.
                     Experience the Fetch! Difference</p>
             </div>
@@ -110,7 +110,109 @@
             </div>
         </section>
     </div>
-
+    <!-- TESTMONIALS SECTION -->
+    <div class="wrapper testmonials__wrapper">
+        <div class="custom-shape-divider-top-1656882394">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path d="M600,112.77C268.63,112.77,0,65.52,0,7.23V120H1200V7.23C1200,65.52,931.37,112.77,600,112.77Z"
+                    class="shape-fill"></path>
+                <defs>
+                    <linearGradient style='border:none;' id="header-shape-gradient-bottom" x2="0.35" y2="1">
+                        <stop offset="0%" stop-color="var(--color-stop)" />
+                        <stop offset="60%" stop-color="var(--color-stop)" />
+                        <stop offset="100%" stop-color="var(--color-bot)" />
+                    </linearGradient>
+                </defs>
+            </svg>
+        </div>
+        <section class="testmonials container col">
+            <h2 class="heading__section">Here's what pet owners have to
+                say about Fetch! Pet Care...
+            </h2>
+            <div class="row testmonial__wrapper">
+                <div class="col testmonial__card">
+                    <div class="custom-shape-divider-top-1656885910">
+                        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                            preserveAspectRatio="none">
+                            <path d="M0,0V6c0,21.6,291,111.46,741,110.26,445.39,3.6,459-88.3,459-110.26V0Z"
+                                class="shape-fill"></path>
+                        </svg>
+                    </div>
+                    <img src="imgs/clients/Ellipse 9.png" alt="" class="card__img">
+                    <h4 class="card__heading">Kenned Dsouza</h4>
+                    <p class="card__paragraph">
+                        " I like that I got to meet the dog Walker who is walking
+                        my dog daily and consult with her. I also appreciate the
+                        daily communication I get about the dog
+                        and how my dog is doing"
+                    </p>
+                </div>
+                <div class="col testmonial__card ">
+                    <div class="custom-shape-divider-top-1656885627">
+                        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                            preserveAspectRatio="none">
+                            <path d="M0,0V6c0,21.6,291,111.46,741,110.26,445.39,3.6,459-88.3,459-110.26V0Z"
+                                class="shape-fill"></path>
+                        </svg>
+                    </div>
+                    <img src="imgs/clients/Ellipse 9.png" alt="" class="card__img">
+                    <h4 class="card__heading">Kenned Dsouza</h4>
+                    <p class="card__paragraph">
+                        " I like that I got to meet the dog Walker who is walking
+                        my dog daily and consult with her. I also appreciate the
+                        daily communication I get about the dog
+                        and how my dog is doing"
+                    </p>
+                </div>
+                <div class="col testmonial__card">
+                    <div class="custom-shape-divider-top-1656885910">
+                        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                            preserveAspectRatio="none">
+                            <path d="M0,0V6c0,21.6,291,111.46,741,110.26,445.39,3.6,459-88.3,459-110.26V0Z"
+                                class="shape-fill"></path>
+                        </svg>
+                    </div>
+                    <img src="imgs/clients/Ellipse 9.png" alt="" class="card__img">
+                    <h4 class="card__heading">Kenned Dsouza</h4>
+                    <p class="card__paragraph">
+                        " I like that I got to meet the dog Walker who is walking
+                        my dog daily and consult with her. I also appreciate the
+                        daily communication I get about the dog
+                        and how my dog is doing"
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- HOW IT WORKS SECTION -->
+        <div class="wrapper howItworks__wrapper">
+            <img src="imgs/Ellipse 16.png" alt="" class="bg-howItWorks__wrapper">
+            <section class="container howItWorks">
+                <div class="col howItWorks__steps">
+                    <img src="imgs/Path 248.png" alt="" class="bg-howItWorks">
+                    <div class="col step__card">
+                        <img src="imgs/howItWorks/Group 69.png" alt="" class="step__card__img">
+                        <h4 class="step__card__heading">Reserve</h4>
+                    </div>
+                    <div class="col step__card">
+                        <img src="imgs/howItWorks/Group 70.png" alt="" class="step__card__img">
+                        <h4 class="step__card__heading">Reserve</h4>
+                    </div>
+                    <div class="col step__card">
+                        <img src="imgs/howItWorks/Group 71.png" alt="" class="step__card__img">
+                        <h4 class="step__card__heading">Reserve</h4>
+                    </div>
+                </div>
+                <div class="col howItWorks__content">
+                    <h2 class="heading__section">
+                        How it Works
+                    </h2>
+                    <p class="paragraph__section">Because finding a good pet sitter shouldn’t be
+                        a hassle. With Fetch! It’s as easy as…</p>
+                </div>
+            </section>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
