--- a/Pet Shop/index.html
+++ b/Pet Shop/index.html
@@ -184,36 +184,128 @@
                 </div>
             </div>
         </section>
-        <!-- HOW IT WORKS SECTION -->
-        <div class="wrapper howItworks__wrapper">
-            <img src="imgs/Ellipse 16.png" alt="" class="bg-howItWorks__wrapper">
-            <section class="container howItWorks">
-                <div class="col howItWorks__steps">
-                    <img src="imgs/Path 248.png" alt="" class="bg-howItWorks">
-                    <div class="col step__card">
-                        <img src="imgs/howItWorks/Group 69.png" alt="" class="step__card__img">
-                        <h4 class="step__card__heading">Reserve</h4>
-                    </div>
-                    <div class="col step__card">
-                        <img src="imgs/howItWorks/Group 70.png" alt="" class="step__card__img">
-                        <h4 class="step__card__heading">Reserve</h4>
-                    </div>
-                    <div class="col step__card">
-                        <img src="imgs/howItWorks/Group 71.png" alt="" class="step__card__img">
-                        <h4 class="step__card__heading">Reserve</h4>
-                    </div>
-                </div>
-                <div class="col howItWorks__content">
-                    <h2 class="heading__section">
-                        How it Works
-                    </h2>
-                    <p class="paragraph__section">Because finding a good pet sitter shouldn’t be
-                        a hassle. With Fetch! It’s as easy as…</p>
-                </div>
-            </section>
-        </div>
     </div>
+    <!-- HOW IT WORKS SECTION -->
+    <div class="wrapper howItworks__wrapper">
+        <img src="imgs/Ellipse 16.png" alt="" class="bg-howItWorks__wrapper">
+        <section class="container howItWorks">
+            <div class="col howItWorks__steps">
+                <img src="imgs/Path 248.png" alt="" class="bg-howItWorks">
+                <div class="col step__card">
+                    <img src="imgs/howItWorks/Group 69.png" alt="" class="step__card__img">
+                    <h4 class="step__card__heading">Reserve</h4>
+                </div>
+                <div class="col step__card">
+                    <img src="imgs/howItWorks/Group 70.png" alt="" class="step__card__img">
+                    <h4 class="step__card__heading">Match</h4>
+                </div>
+                <div class="col step__card">
+                    <img src="imgs/howItWorks/Group 71.png" alt="" class="step__card__img">
+                    <h4 class="step__card__heading">Relax</h4>
+                </div>
+            </div>
+            <div class="col howItWorks__content">
+                <h2 class="heading__section">
+                    How it Works
+                </h2>
+                <p class="paragraph__section">Because finding a good pet sitter shouldn’t be
+                    a hassle. With Fetch! It’s as easy as…</p>
+            </div>
+        </section>
+    </div>
+    <div class="wrapper makeFetchHappen__wrapper">
+        <section class="makeFetchHappen row container">
+            <div class="col">
+                <img src="imgs/Group 108.png" alt="" class="makeFetchHappen__img">
+            </div>
+            <div class="col makeFetchHappen__content">
+                <h2 class="heading__section">
+                    Make Fetch! Happen
+                </h2>
+                <p>
+                    If you love pets and want exciting work, apply to be a Fetch! Pet Care Provider! We train every team
+                    member and provide ongoing support to help you get the most from your experience.
+                </p>
+                <div class="row">
+                    <a href="" class="btn makeFetchHappen__btn">Join Now</a>
+                </div>
+            </div>
+        </section>
+    </div>
+    <section class="asSeenOn container">
+        <div class="row">
+            <div class="col asSeenOn__logo">
+                <img src="imgs/asSeenOn/Mask Group 14.png" alt="">
+            </div>
+            <div class="col asSeenOn__logo">
+                <img src="imgs/asSeenOn/Mask Group 15.png" alt="">
+            </div>
+            <div class="col asSeenOn__logo">
+                <img src="imgs/asSeenOn/Mask Group 16.png" alt="">
+            </div>
+            <div class="col asSeenOn__logo">
+                <img src="imgs/asSeenOn/Mask Group 17.png" alt="">
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
+<footer class="footer">
+    <!-- <div class="custom-shape-divider-top-1657043410">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M600,112.77C268.63,112.77,0,65.52,0,7.23V120H1200V7.23C1200,65.52,931.37,112.77,600,112.77Z"
+                class="shape-fill"></path>
+        </svg>
+    </div> -->
+    <div class="custom-shape-divider-top-1657044288">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path
+                d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
+                class="shape-fill"></path>
+        </svg>
+    </div>
+    <div class="footer__container container">
+        <div class="footer__col col">
+            <h3 class="footer__heading">About</h3>
+            <a href="#" class="footer__links">Locations</a>
+            <a href="#" class="footer__links">Franchise with us</a>
+            <a href="#" class="footer__links">Partners</a>
+            <a href="#" class="footer__links">About Us</a>
+            <a href="#" class="footer__links">Make Fetch Happen</a>
+        </div>
+        <div class="footer__col col">
+            <h3 class="footer__heading">Resources</h3>
+            <a href="#" class="footer__links">Reviews</a>
+            <a href="#" class="footer__links">Pet Resource Center</a>
+            <a href="#" class="footer__links">Media Fact Sheet</a>
+            <a href="#" class="footer__links">Blog</a>
+            <a href="#" class="footer__links">News</a>
+        </div>
+        <div class="footer__col col">
+            <h3 class="footer__heading hidden">1</h3>
+            <a href="#" class="footer__links">Gift Cards</a>
+            <a href="#" class="footer__links">Services</a>
+            <a href="#" class="footer__links">Franchise Login</a>
+            <a href="#" class="footer__links">Terms Of Use</a>
+            <a href="#" class="footer__links">Privacy Policy</a>
+        </div>
+        <div class="footer__col col newspaper">
+            <h3 class="footer__heading">NewsLetter</h3>
+            <p class="footer__paragraph">
+                Sign up to receive the Fetch!<br>
+                Family Newsletter
+            </p>
+            <div class="row newspaper__signUp">
+                <input type="email" placeholder="Email Address" class="newspaper__input">
+                <i class="fa-solid fa-arrow-right-long"></i>
+            </div>
+            <div class="row social__links__container">
+                <i class="fa-brands fa-github social__links"></i>
+                <i class="fa-brands fa-behance social__links"></i>
+                <i class="fa-brands fa-instagram social__links"></i>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </html>
